--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,4 +7,9 @@ target_include_directories(Example PUBLIC
 )
 
 target_link_libraries(Example PUBLIC amsdk)
-set_target_properties(Example PROPERTIES PREFIX "" SUFFIX ".ext.2.${HL2SDK_ENGINE_NAME}${HL2SDK_LIB_SHARED_EXT}")
+
+if (USE_SDK)
+    set_target_properties(Example PROPERTIES PREFIX "" SUFFIX ".ext.2.${HL2SDK_ENGINE_NAME}${LIB_SHARED_EXT}")
+else()
+    set_target_properties(Example PROPERTIES PREFIX "" SUFFIX ".ext${LIB_SHARED_EXT}")
+endif()
